# pyinject

./: .gitignore  LICENSE  README.md  pyinject.py  pyinject_example.py  pyproject.toml
examples/: example1.py  example2.py
pyinject/: __init__.py  _dependency.py  _helpers.py  _manager.py  _meta.py  _resolver.py  decorators.py  functions.py  manager.py  overrider.py
tests/: test_autowire.py  test_dependencies_manager.py  test_dependency_overrider.py
