[tool.poetry]
name = "pyinject"
version = "0.0.4"
description = "Python Dependency Injection made easy, Inspired by FastAPI."
authors = ["Udi Shalev"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"
mypy = "^1.7.1"
pytest-xdist = "^3.5.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
